# hoshi-lang-stdlib

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  libzip
examples/: libsqlite.hoshi  libzip.hoshi  net-header.hoshi  net-http.hoshi  net-socket.hoshi  net-uri-encode.hoshi  net-uri-parse.hoshi  net-uri.hoshi
lib/net/: net.cpp  net.h  net.hpp
lib/zip/: miniz.h  zip.c  zip.h
src/: net.hoshi  sqlite.hoshi  zip.hoshi
src/net/: http.hoshi  index.hoshi  socket.hoshi  uri.hoshi
tools/: code_test.py
